<resources>
    <string name="app_name">Chisto</string>

    <string name="lost_connection">Lost internet connection.</string>
    <string name="loading">Loading</string>
    <string name="nothing_selected">Nothing is chosen</string>
    <string name="empty_field">Field can not be empty</string>
    <string name="wrong_data">Wrong data</string>
    <string name="no_comment">No review</string>
    <string name="payment_error">Payment error</string>
    <string name="removal_error">You must leave at least one treatment</string>
    <string name="removal">You must leave at least one treatment</string>
    <string name="wrong_phone">Wrong phone number</string>
    <string name="profile_wrong_fields">Not all fields are filled in correctly. Do you want to exit without saving the entered data?</string>
    <string name="server_error">Server error</string>
    <string name="wrong_phone_code">Invalid phone number</string>
    <string name="wrong_city_code">Invalid city name</string>
    <string name="wrong_width_or_length_code">Invalid length or width</string>
    <string name="wrong_review_code">Review can not be empty</string>

    <string name="start">Start</string>
    <string name="simple">It is simple:</string>
    <string name="chisto">No need to waste time going to dry cleaners</string>
    <string name="board1">Add items for cleaning</string>
    <string name="board2">Choose a cleaning service from our list of offers by price and speed</string>
    <string name="board3">Pay with credit card in the app or in cash</string>
    <string name="board4">A courier will collect your things at the agreed time and will then return them clean</string>

    <string name="city_select">Choose Your City</string>
    <string name="location_error">Unable to obtain the current location</string>
    <string name="city_error">Your city is not listed</string>
    <string name="city_not_found">"Didn't find your city?"</string>

    <string name="order">Order</string>
    <string name="item_help">What items need to be cleaned?</string>

    <string name="continue_btn">Next</string>
    <string name="ready">Ready</string>
    <string name="save">Save</string>
    <string name="yes_code">YES</string>
    <string name="no_code">NO</string>
    <string name="send_code">SEND</string>
    <string name="back_code">BACK</string>
    <string name="search">Search</string>
    <string name="free">Free</string>
    <string name="ok_code">OK</string>

    <string name="select_part">Categories</string>

    <string name="service_select">Services</string>
    <string name="what_need_to_do">How your item should be cleaned?</string>

    <string name="selected_tr">Treatments</string>
    <string name="count">Quantity</string>

    <string name="last_order">Last time you ordered in</string>
    <string name="view_all">See all offers</string>

    <string name="contact_us">Contact</string>
    <string name="about">About</string>
    <string name="about_social">Follow us</string>
    <string name="rate">Rate us</string>
    <string name="about_bottom">Want to partner with us?</string>
    <string name="write_bottom">Leave us a message</string>

    <string name="profile">Profile</string>
    <string name="rules">Terms of Use</string>
    <string name="my_orders">My orders</string>
    <string name="contact_data">Edit profile</string>
    <string name="call_us">Call</string>
    <string name="email">Email</string>

    <string name="price">Price</string>
    <string name="courier">Collection</string>

    <string name="delete_from_order">Do you want to remove this item out of order?</string>
    <string name="decoration_question">Does your item have any decorations?</string>

    <string name="laundries">Offers</string>
    <string name="title">Sort offers:</string>
    <string name="choose">Select</string>
    <string name="cost_filter">By price</string>
    <string name="speed_filter">By speed</string>
    <string name="rate_filter">By rating</string>
    <string name="laundry_code">"In laundry "</string>
    <string name="order_code">"Order in "</string>

    <string name="reg">Registration</string>
    <string name="sign_in">Registration</string>
    <string name="send">Apply</string>
    <string name="code">Verification code</string>
    <string name="send_code_after">"Send again after "</string>
    <string name="send_again">Send again</string>
    <string name="code_send">We will send a 5-digit verification code</string>
    <string name="number_code">A code has been sent to</string>
    <string name="code_sent">""</string>
    <string name="type_phone">Enter phone number</string>
    <string name="code_title">Enter confirmation code</string>

    <string name="delivery">Delivery Fee</string>
    <string name="your_order">Your order</string>
    <string name="order_help">Closest dates are displayed. Negotiate the exact delivery time with an operator</string>

    <string name="name">First name</string>
    <string name="lastname">Last name</string>
    <string name="phone">Phone number</string>
    <string name="city">City name</string>
    <string name="street">Street name</string>
    <string name="house">House number</string>
    <string name="flat">Apartment number</string>
    <string name="comment">Extra information</string>
    <string name="e_mail">Email</string>

    <string name="contact_info">Contact information</string>
    <string name="delivery_address">Delivery address</string>
    <string name="comment_title">Extra information</string>
    <string name="personal_info">Personal information</string>

    <string name="cost_reg">Order price</string>
    <string name="ordering_code">Create order</string>
    <string name="contact_profile">Contact information</string>

    <string name="seconds_code">" s"</string>
    <string name="bank">Payment\ncard</string>
    <string name="pay">Cash</string>

    <string name="address_select">Select address</string>
    <string name="success_order">Order successfully created</string>

    <string name="wait">Expect to be contacted by an operator</string>
    <string name="your_order_help">Order information is available in your profile</string>
    <string name="notifications_help">Would you like to receive notifications about your order?</string>

    <string name="my_order_code">Order №</string>
    <string name="order_questions">Have any questions? Contact us.</string>

    <string name="result_order">Total price</string>

    <string name="completed_code">Completed</string>
    <string name="processing_code">Processing</string>
    <string name="canceled_code">Canceled</string>
    <string name="cleaning_code">Cleaning</string>
    <string name="dispatched_code">Dispatched</string>
    <string name="confirmed_code">Confirmed</string>

    <string name="premium">Premium</string>
    <string name="fast">Fast</string>
    <string name="economy">Cheap</string>

    <string name="review">Reviews</string>

    <string name="send_from_about">Send</string>

    <string name="create_order_code">"Create an Order: "</string>

    <string name="from_code">"from "</string>
    <string name="end_bound_code">" to "</string>

    <string name="empty_orders">No orders</string>
    <string name="empty_reviews">No reviews</string>
    <string name="decoration_help">Rhinestones, beads, sequins, lace or any other decorations that require special treatment</string>
    <string name="city_not_found_helper">Leave your contact information and we will notify you once our services are available in your city</string>

    <string name="select_size">Specify item size</string>
    <string name="square">Area</string>
    <string name="width">Width, cm</string>
    <string name="length">Length, cm</string>

    <string name="decoration">Decoration</string>

    <string name="splitter_code">" and "</string>
    <string name="square_meter_symbol">" m²"</string>

    <string name="ruble_sign">" ₽"</string>

    <string name="review_help">We hope that you are satisfied. Please write a review to help other users.</string>
    <string name="your_review">Review</string>
    <string name="completed">" completed!"</string>

    <string name="status_changed">Order status has changed</string>
    <string name="default_notification_text">Check order information</string>
    <string name="error">Error</string>
    <string name="number_sign">№</string>
    <string name="registration_browse">By signing up, you accept our <u>Terms of Use</u></string>
    <string name="log_out">Log out</string>
    <string name="payment_type">Payment method</string>
    <string name="cash">Cash</string>
    <string name="card">Payment card</string>
    <string name="order_price">Order price</string>
    <string name="promo">Promo code</string>
    <string name="minimum_order_price">Minimum order price</string>
    <string name="registration_not_completed_error">Registration is not completed. Leave screen?</string>
    <string name="final_price">Total price</string>
    <string name="support_phone_number"><u>+7 (495) 766-78-49</u></string>
    <string name="review_btn">Review</string>
    <string name="promo_hint">Promo code</string>
    <string name="promo_help">Valid for all treatments</string>
    <string name="promo_error">Promo code is invalid or has been already used</string>
    <string name="minus_sign">-</string>
    <string name="zero_size">0 m²</string>
    <string name="items_search">Search</string>
    <string name="dont_ask_again">"Don't show again"</string>

    <plurals name="review">
        <item quantity="zero">0 reviews</item>
        <item quantity="one">%1$d review</item>
        <item quantity="other">%1$d reviews</item>
    </plurals>

    <plurals name="items">
        <item quantity="zero">0 items</item>
        <item quantity="one">%1$d item</item>
        <item quantity="other">%1$d items</item>
    </plurals>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_code">Wrong code</string>
    <string name="slow_item_tooltip">This item is cleaned for a long time</string>
    <string name="count_postfix">" "</string>
    <string name="edit_review">Edit Review</string>

    <string name="page_welcome_text">Do not waste your time on dry cleaning \n \nThe courier will pick up things\nand return them clean.</string>
    <string name="page_one_text">Add things to wash in the shopping cart,\nuse the search for the name\nof the thing</string>
    <string name="page_two_text">Select the right dry cleaners\nfor the price and rating..</string>
    <string name="page_three_text">Pay by card, using Android Pay\nor cash to the courier</string>
    <string name="all_categories">All items</string>
    <string name="order_material">Item material</string>
    <string name="note">Note</string>
    <string name="note_text">В зависимости от ваших загрязнений и материала вещи, технолог химчистки применит к ней аквачистку, либо химчистку, а для рубашек или постельного белья бережную стирку</string>
    <string name="select_order">Select</string>
    <string name="all">All</string>
    <string name="settings">Settings</string>
    <string name="changes_saved">Changes saved</string>
    <string name="optional">Optional</string>
    <string name="logout_question">Logout?</string>
</resources>
