<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:background="#ffffff"
             android:id="@+id/main_dialog_part"
             android:layout_margin="12dp"
             android:elevation="8dp"
             android:layout_gravity="center"
             android:layout_height="296dp">

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_marginTop="88dp"
                  android:layout_marginEnd="16dp"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:layout_marginStart="16dp"
                  android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_weight="1.0"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_height="wrap_content">

            <EditText android:layout_width="match_parent"
                      android:textSize="16sp"
                      android:hint="@string/length"
                      android:text="0"
                      android:maxLength="4"
                      android:inputType="numberDecimal"
                      android:id="@+id/length_text"
                      android:gravity="center"
                      android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_weight="1.0"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_height="wrap_content">

            <EditText android:layout_width="match_parent"
                      android:hint="@string/width"
                      android:inputType="numberDecimal"
                      android:textSize="16sp"
                      android:maxLength="4"
                      android:text="0"
                      android:id="@+id/width_text"
                      android:gravity="center"
                      android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:text="@string/select_size"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_margin="12dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="wrap_content"
            android:text="@string/square"
            android:textColor="#727272"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="166dp"
            android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_gravity="bottom">
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/BrandButtonStyle"
                android:text="@string/cancel"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_weight="1.0"
                android:layout_marginRight="-12dp"
                android:layout_marginLeft="-12dp"
                android:layout_marginBottom="-8dp"
                android:id="@+id/cancel_btn"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:gravity="center"/>
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/BrandButtonStyle"
                android:text="@string/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_weight="1.0"
                android:layout_marginRight="-12dp"
                android:layout_marginLeft="-12dp"
                android:layout_marginBottom="-8dp"
                android:id="@+id/size_ok_btn"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:gravity="center"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:text="@string/zero_size"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:id="@+id/square_text"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:gravity="center"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="188dp"
            android:layout_height="wrap_content"/>
</FrameLayout>
