<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:background="#ffffff"
             android:id="@+id/main_dialog_part"
             android:layout_margin="12dp"
             android:layout_gravity="center"
             android:layout_height="296dp">

    <TextView
            android:layout_width="wrap_content"
            android:text="@string/success_order"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="wrap_content"
            android:text="@string/wait"
            android:textColor="#212121"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="136dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:background="@drawable/button_border"
            android:textSize="16sp"
            android:paddingEnd="24dp"
            android:paddingRight="24dp"
            android:id="@+id/order_name"
            android:paddingLeft="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="82dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="wrap_content"
            android:text="@string/your_order_help"
            android:textColor="#212121"
            android:textSize="14sp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:gravity="center"
            android:layout_marginStart="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="176dp"
            android:layout_height="wrap_content"/>


    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/BrandButtonStyle"
            android:text="@string/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginRight="-12dp"
            android:layout_marginLeft="-12dp"
            android:layout_marginBottom="-8dp"
            android:id="@+id/cont_btn"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:layout_gravity="bottom"
            android:gravity="center"/>
</FrameLayout>
