<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/type_phone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#212121"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="1.0" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/phoneEditText"
        android:textColor="#212121"
        android:inputType="phone"
        android:textSize="22sp"
        android:hint="+7 900 000-00-00"
        android:lines="1"
        android:gravity="center"
        android:maxLength="25"
        android:letterSpacing="0.04"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingRight="12dp"
        android:paddingEnd="12dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:met_underlineColor="#212121"
        app:met_baseColor="@color/colorPrimary"
        app:met_textColor="@color/colorPrimary"
        app:met_errorColor="#ffffff"
        app:met_floatingLabel="none"
        app:met_helperTextColor="#727272"
        app:met_primaryColor="@color/colorAccent"
        android:textColorHint="#727272"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/labelSendCodeTextView" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/codeEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:hint="@string/code"
        android:inputType="numberSigned"
        android:letterSpacing="0.04"
        android:maxLength="5"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/greyColor"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        app:layout_constraintBottom_toTopOf="@+id/labelSendCodeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:met_baseColor="@color/colorAccent"
        app:met_errorColor="@color/colorAccent"
        app:met_floatingLabel="none"
        app:met_helperTextColor="@color/colorAccent"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColor="@color/colorAccent"
        app:met_underlineColor="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:layout_gravity="center"
        android:textColor="#727272"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/labelSendCodeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelSendCodeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:gravity="center"
        android:text="@string/code_send"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#212121"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize">

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/action_bar">

                <ImageView
                    android:id="@+id/left_btn"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_back"
                    android:padding="13dp"
                    android:layout_gravity="start" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reg"
                    android:layout_gravity="center"
                    android:id="@+id/date_text_view"
                    android:gravity="center_vertical"
                    android:typeface="sans"
                    android:textSize="22sp"
                    android:textColor="#ffffff" />
            </FrameLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/continueButton"
        android:background="@drawable/blue_button_selector"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/browse"
        app:layout_constraintTop_toBottomOf="@+id/labelSendCodeTextView" />

    <TextView
        android:id="@+id/browse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:text="@string/registration_browse"
        android:textColor="#727272"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
